fix(MenuItem): tooltip should on all item and not only on title
this is a temp hack until the next major, it adds a hidden title element, not visible to screen readers and keyboard navigation, but it catches hover for tooltip width

--- a/src/components/Menu/MenuItem/MenuItem.module.scss
+++ b/src/components/Menu/MenuItem/MenuItem.module.scss
@@ -103,3 +103,10 @@
   flex-grow: 1;
   padding-block: 1px;
 }
+
+.hiddenTitle {
+  width: 100%;
+  position: absolute;
+  left: 0;
+  opacity: 0;
+}
